--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,8 @@ spring.security.oauth2.client.registration.google.client-id=41611237530-lkqnntv4
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 
+##imageboard cache no!
+#spring.resources.cache.period=0
+#spring.thymeleaf.cache=false
 
 
