--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.security.oauth2.client.registration.kakao.client-id=c6120b18905d96ee859e2
 spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email,profile_image
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
 
 #KAKAO PROVIDER
@@ -47,13 +47,7 @@ spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
-#Google
-spring.security.oauth2.client.registration.google.client-id=41611237530-lkqnntv410n5bpp5q9dr5dv4kjodlsc8.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.scope=email,profile
 
 ##imageboard cache no!
 #spring.resources.cache.period=0
 #spring.thymeleaf.cache=false
-
-
