아디비번찾기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 #JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -47,6 +49,13 @@ spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
+#Java MailSender
+spring.mail.host=smtp.naver.com
+spring.mail.port=465
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username=shwysh123
+spring.mail.password=Dhrgml!8sus
 
 ##imageboard cache no!
 #spring.resources.cache.period=0
